Web Inspector: REGRESSION(309194@main) Popups for WI.MultipleScopeBarItem don't show up anymore https://bugs.webkit.org/show_bug.cgi?id=311266 rdar://173857179
Reviewed by Devin Rousso.

Web Inspector relies on non-standard behavior to trigger a <select> element
by means of a synthetic click event. The change in https://commits.webkit.org/309194@main
aligns WebKit behavior to other browser engines to prevent this behavior.

In absence of `HTMLSelectElement.showPicker()`, which is not yet enabled in Web Inspector,
we can work around the change by making the `<select>` element cover the hit area,
obscure it visually, and allow original clicks on it.

This is a common cross-browser technique to implement the selected state of
a custom `<select>` element while preserving the ergonomics of the options list
provided by the user agent.

When custom elements are enabled in WebKit, Web Inspector can adopt them and drop this workaround.

* Source/WebInspectorUI/UserInterface/Views/MultipleScopeBarItem.js:
(WI.MultipleScopeBarItem.prototype._handleMouseDown):
(WI.MultipleScopeBarItem._selectElementSelectionChanged): Deleted.
* Source/WebInspectorUI/UserInterface/Views/ScopeBar.css:
(.scope-bar > li.multiple > select):

Canonical link: https://commits.webkit.org/310437@main

--- a/Source/WebInspectorUI/UserInterface/Views/ScopeBar.css
+++ b/Source/WebInspectorUI/UserInterface/Views/ScopeBar.css
@@ -91,13 +91,11 @@
 
 .scope-bar > li.multiple > select {
     position: absolute;
-    top: -1px;
+    top: -3px;
     inset-inline-start: calc(var(--scope-bar-padding) - var(--scope-bar-padding-default) - 2px);
-    width: 0;
-    height: 0;
+    width: 100%;
     margin: 0;
     opacity: 0;
-    pointer-events: none;
 }
 
 .scope-bar > li:focus::after,
